# libklio

./: CMakeLists.txt  Makefile  README.md  libklioConfig.cmake.in  testconfig.h
Dashboards/: CTestConfigLibKlio.cmake  LibKlioCoverage.cmake  LibKlioCoverage_2.cmake  LibKlioNightly.cmake  LibKlioNightly_1.cmake  LibKlioNightly_2.cmake  LibKlioNightly_x86-kk-dev.cmake  Tools.cmake  do_test.cmake  run_continuous  run_nightly
contrib/: FindKlio.cmake  README
contrib/patches/: patch.13032014.sh
libklio/: CMakeLists.txt  common.cpp  common.hpp  config.h.in  csv-importer.cpp  csv-importer.hpp  device-type.cpp  device-type.hpp  error.hpp  exporter.hpp  importer.hpp  json-exporter.cpp  json-exporter.hpp  json_exporter.cpp  json_exporter.hpp  local-time.cpp  local-time.hpp  local_time.cpp  local_time.hpp  octave-exporter.cpp  octave-exporter.hpp  octave_exporter.cpp  octave_exporter.hpp  sensor-factory.cpp  sensor-factory.hpp  sensor.cpp  sensor.hpp  sensorfactory.cpp  sensorfactory.hpp  store-factory.cpp  store-factory.hpp  store.cpp  store.hpp  time.cpp  time.hpp  transaction.cpp  transaction.hpp  types.hpp
libklio/algorithm/: collate.cpp  collate.hpp
libklio/csv/: csv-store.cpp  csv-store.hpp
libklio/msg/: msg-store.cpp  msg-store.hpp  msgstore.cpp  msgstore.hpp
libklio/postgresql/: postgresql-store.cpp  postgresql-store.hpp  postgresql-transaction.cpp  postgresql-transaction.hpp
libklio/redis/: redis-store.cpp  redis-store.hpp  redis-transaction.cpp  redis-transaction.hpp
libklio/rocksdb/: rocksdb-store.cpp  rocksdb-store.hpp
libklio/sqlite3/: CMakeLists.txt  sqlite3-store.cpp  sqlite3-store.hpp  sqlite3-transaction.cpp  sqlite3-transaction.hpp  sqlite3store.cpp  sqlite3store.hpp  transaction.cpp  transaction.hpp
libklio/txt/: txt-store.cpp  txt-store.hpp
modules/: CPackTools.cmake  CheckCompiler.cmake  FindCurl.cmake  FindJson.cmake  FindLibMysmartGrid.cmake  FindPostgreSQL.cmake  FindRedis3m.cmake  FindRocksDB.cmake  FindSqlite.cmake  UseCodeCoverage.cmake
src/: CMakeLists.txt  klio-add.cpp  klio-export.cpp  klio-import.cpp  klio-sensor.cpp  klio-store.cpp  timedoodle.cpp
tests/: CMakeLists.txt  testconfig.h.in
tests/algorithms/: CMakeLists.txt  main.cpp  test_algorithms.cpp
tests/sensors/: CMakeLists.txt  main.cpp  test_data.cpp  test_readings.cpp  test_sensors.cpp
tests/store/: CMakeLists.txt  main.cpp  test_csv_store.cpp  test_msg_store.cpp  test_postgresql_store.cpp  test_redis_store.cpp  test_rocksdb_store.cpp  test_sqlite3_store.cpp  test_store.cpp  test_txt_store.cpp
tests/time/: CMakeLists.txt  main.cpp  test_time.cpp
